--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@ body {
     width: 100%;
     background-color: #4CAF50;
     border-radius: 5px;
-    //transition: width 0.1s linear, background-color 0.3s linear; /* Added transition for color */
 	transition: background-color 0.2s linear;
 }
 
@@ -188,16 +187,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: top; /* Align items to the top */
+    justify-content: top;
     margin-top: 20px;
     padding-right: clamp(10px, 3vw, 20px); /* Responsive padding */
     flex-shrink: 0;
-    flex-basis: clamp(80px, 22vw, 130px); /* Adjusted base width for save button */
+    flex-basis: clamp(70px, 20vw, 120px); /* Adjusted base width for save button */
     position: relative;
 }
 
 .pair-container {
-    margin-bottom: clamp(10px, 3vh, 15px); /* Adjusted margin */
+    margin-bottom: clamp(10px, 3vh, 20px); /* Adjusted margin */
     text-align: center;
 }
 
@@ -224,7 +223,7 @@ body {
     border-radius: 5px;
     background-color: #e0e0e0;
     cursor: pointer;
-    width: clamp(80px, 90%, 110px); /* Responsive width */
+    width: clamp(60px, 90%, 110px); /* Responsive width */
     font-size: clamp(0.9em, 2vw, 1.1em);
     box-sizing: border-box;
 }
@@ -257,7 +256,7 @@ body {
     color: white;
     font-size: 16px;
     cursor: pointer;
-    width: clamp(80px, 90%, 110px); /* Match save button width for consistency */
+    width: clamp(60px, 90%, 110px); /* Match save button width for consistency */
     box-sizing: border-box;
 }
 #end-game-btn:hover {
@@ -535,7 +534,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const PRESSURE_MODE_INITIAL_TIME = 10 * 1000;
     const PRESSURE_MODE_DECREMENT = 100;
     const PRESSURE_MODE_MIN_TIME = 500;
-	const PRESSURE_MODE_THRESHOLD_TIME = 1700;
+	const PRESSURE_MODE_THRESHOLD_TIME = 2000;
     const GRID_PADDING = 2;
     const GRID_GAP = 2;
 
@@ -599,6 +598,7 @@ document.addEventListener('DOMContentLoaded', () => {
             allowInput = true;
         }
 	    playfieldContainer.style.marginBottom = '15px';
+		playfieldContainer.style.marginRight = '4px';
 
         score = 0;
         combo = 0;
